--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Arnedo1.github.io/yBurgers",
+  "homepage": "https://arnedo1.github.io/Burgers/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
